hphp/hack/test/typecheck/trait_use/use_trait_multiple_times_fail.php.exp
File "use_trait_multiple_times_fail.php", line 6, characters 7-7:
Class `C` uses trait `T` multiple times (Typing[4365])
File "use_trait_multiple_times_fail.php", line 8, characters 7-7:
used here
File "use_trait_multiple_times_fail.php", line 9, characters 7-7:
used here
File "use_trait_multiple_times_fail.php", line 10, characters 7-7:
used here
